<resources>
    <string name="altura">Height</string>
    <string name="m">m</string>
    <string name="peso">Weight</string>
    <string name="kg">kg</string>
    <string name="i_m_c">B.M.I.</string>
    <string name="limpar">Erase</string>
    <string name="salvar">Save</string>
    <string name="calcular">calculate</string>
    <string name="nNotifica">Do not notify me</string>
    <string name="notificaAgua">Notify me only to drink water</string>
    <string name="notificaEx">Notify me only to do exercises</string>
    <string name="notificaDois">Notify me to drink water and do exercises</string>
    <string name="nEx">I don\'t do any exercises</string>
    <string name="exAsVzs">I do exercises sometimes</string>
    <string name="exSempre">I exercise regularly</string>
    <string name="veracDados">I was sincere in declaring my data in order to obtain a better application experience</string>
    <string name="nomeAutoria" translatable="false">Yohan Duarte Pessanha</string>
    <string name="cursoAutoria">Software Engineering</string>
    <string name="emailAutoria" translatable="false">yohandpessanha@gmail.com</string>
    <string name="descAutoria">The application is a health manager and will assist the user to maintain healthy habits, such as drinking water, exercising, etc.</string>
    <string name="logoAutoria">TODO</string>
    <string name="voltar">Back</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="alterar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="cancelar">Cancel</string>
    <string name="preencha_nome">Fill the name field!</string>
    <string name="preencha_altura">Fill your height!</string>
    <string name="preencha_peso">Fill your weight!</string>
    <string name="imc_baixo"> is considered a BMI for those who are underweight. Consult a nutritionist.</string>
    <string name="imc_ideal"> is considered a bmi for those who are at the ideal weight.</string>
    <string name="imc_acimaPeso"> is considered an imc of those who are overweight. Consult a nutritionist.</string>
    <string name="imc_acimaPeso2"> is considered an imc of those who are overweight. Consult a nutritionist.</string>
    <string name="imc_blank">By clicking the button, I will calculate your imc!</string>
    <string name="notific_blank">Check a notification option!</string>
    <string name="dados_naoVeridicos">Don\'t lie about your data!</string>
    <string name="imc_naoCalculado">I detected that you did not press the Calculate BMI button. Try squeezing it to avoid data inaccuracy !!</string>
    <string name="cadastro">Register</string>
    <string name="nome">Name</string>
    <string name="app_name">HabitsControl</string>
    <string name="tema" />
    <string name="daily">Daily</string>
    <string name="remaining">Remaining</string>
    <string name="reset_day">Reset Day</string>
    <string name="update">Update</string>
    <string name="none">None</string>
    <string name="cup">Cup</string>
    <string name="mug">Mug</string>
    <string name="bottle">Bottle</string>
    <string name="preencha_ml">Fill the ml field!</string>
    <string name="name">Name</string>
    <string name="ml">ml</string>
    <string name="registro">Registered</string>
    <string name="ultAgua">Last drink</string>
    <string name="aviso">Alert</string>
    <string name="ok">OK</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="confirmacao">Confirmation</string>
    <string name="deleteMsgUsr">Are you sure you want to delete</string>
    <string name="yourInfo">Your Info</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
</resources>